# ariac_2021_submission

./: CMakeLists.txt  README.md  package.xml
action/: inspectionAssembly.action  kittingPickUpConveyorObject.action  kittingPickUpStaticObject.action  pickupStaticObject.action
config/: my_gear_conf.yaml
include/: ARIACTaskManager.h  gantryRobot.h  kittingRobot.h  kitting_robot_sample.h
launch/: competition.launch  depth.launch  kittingRobot.launch  simulation_env.launch
src/: TaskManager.cpp  first_executable.cpp  gantryRobot.cpp  kittingRobot.cpp  kitting_robot_sample.cpp
srv/: addPlanningSceneCollision.srv
