<?xml version="1.0"?>
<package format="2">
  <name>ariac_2021_submission</name>
  <version>0.1.0</version>
  <description>My ARIAC 2021 submission package.</description>
  <maintainer email="vr.rohith01@gmail.com">Rohith V.R</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nist_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
